force-app/main/default/objects/Chain_Anchor__b/Chain_Anchor__b.object-meta.xml
<CustomObject>
    <description>Daily terminal hash per chain. This is what a customer hands an auditor. See CONTRACT.md sec 5.2.</description>
    <label>Chain Anchor</label>
    <pluralLabel>Chain Anchors</pluralLabel>
    <indexes>
        <fullName>Chain_Anchor_Index</fullName>
        <label>Chain Anchor Index</label>
        <fields>
            <name>Chain_Key__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>Anchor_Date__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>Anchor_Key__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
    </indexes>
</CustomObject>