force-app/main/default/objects/Chain_Anchor__b/fields/Anchor_Date__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Date__c</fullName>
    <label>Anchor Date</label>
    <description>The date whose terminal state this anchor records. Second component of the composite index. Big Objects do not support the Date type, so this is a DateTime normalized to midnight GMT; every writer must normalize or index equality breaks.</description>
    <type>DateTime</type>
    <required>true</required>
</CustomField>