force-app/main/default/objects/Chain_Anchor__b/fields/Anchor_Key__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Key__c</fullName>
    <label>Anchor Key</label>
    <description>Uniqueness tiebreak for the anchor. Third component of the composite index.</description>
    <type>Text</type>
    <length>35</length>
    <required>true</required>
</CustomField>