force-app/main/default/objects/Chain_Anchor__b/fields/Computed_At__c.field-meta.xml
<CustomField>
    <fullName>Computed_At__c</fullName>
    <label>Computed At</label>
    <description>When this anchor was computed.</description>
    <type>DateTime</type>
</CustomField>