force-app/main/default/objects/Chain_Anchor__b/fields/Computed_By__c.field-meta.xml
<CustomField>
    <fullName>Computed_By__c</fullName>
    <label>Computed By</label>
    <description>Id of the process or user that computed this anchor.</description>
    <type>Text</type>
    <length>18</length>
</CustomField>