force-app/main/default/objects/Chain_Anchor__b/fields/Link_Count__c.field-meta.xml
<CustomField>
    <fullName>Link_Count__c</fullName>
    <label>Link Count</label>
    <description>Number of links in the chain up to and including the terminal position.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>