force-app/main/default/objects/Chain_Anchor__b/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <label>Signature</label>
    <description>Cryptographic signature over the terminal hash, for external verification of the anchor.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>