force-app/main/default/objects/Chain_Anchor__b/fields/Terminal_Hash__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Hash__c</fullName>
    <label>Terminal Hash</label>
    <description>This_Hash of the last link in the chain as of the anchor date.</description>
    <type>Text</type>
    <length>128</length>
</CustomField>