force-app/main/default/objects/Chain_Anchor__b/fields/Terminal_Position__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Position__c</fullName>
    <label>Terminal Position</label>
    <description>Chain position of the terminal link as of the anchor date.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>